objects/vlocity_cmt__QuoteDiscount__c.object
<CustomObject>
    <fields>
        <fullName>vlocity_cmt__Action__c</fullName>
        <label>Action</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>Change</fullName>
                </value>
                <value>
                    <fullName>Deactivate</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_cmt__AppliesToAllItems__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Applies To All Items</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__ApprovalStatus__c</fullName>
        <label>Approval Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Not Submitted</fullName>
                </value>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_cmt__Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__DiscountTemplateId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Discount Template</label>
        <referenceTo>vlocity_cmt__Promotion__c</referenceTo>
        <relationshipLabel>Quote Discounts</relationshipLabel>
        <relationshipName>QuoteDiscounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__DiscountType__c</fullName>
        <label>Discount Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Account</fullName>
                </value>
                <value>
                    <fullName>Order</fullName>
                </value>
                <value>
                    <fullName>Contract</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_cmt__DurationUnitOfMeasure__c</fullName>
        <label>Discount Duration Unit of Measure</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Day</fullName>
                </value>
                <value>
                    <fullName>Week</fullName>
                </value>
                <value>
                    <fullName>Month</fullName>
                </value>
                <value>
                    <fullName>Year</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_cmt__Duration__c</fullName>
        <label>Discount Duration</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__EffectiveEndDate__c</fullName>
        <label>Effective End Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__EffectiveStartDate__c</fullName>
        <label>Effective Start Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__QuoteId__c</fullName>
        <label>Quote</label>
        <referenceTo>Quote</referenceTo>
        <relationshipLabel>Quote Discounts</relationshipLabel>
        <relationshipName>QuoteDiscounts</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__ReferenceNumber__c</fullName>
        <externalId>true</externalId>
        <label>Reference Number</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__Status__c</fullName>
        <description>The status of the discount record. For an Account type discount or a Contract type discount it means that a corresponding AccountDiscount or a ContractDiscount has been created or updated.</description>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Activated</fullName>
                </value>
                <value>
                    <fullName>Not Activated</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Quote Discount</label>
    <listViews>
        <fullName>vlocity_cmt__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Quote Discounts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>